--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
 /* Navbar */
 nav {
   width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
   padding: 1em 0;
   position: fixed;
   top: 0;
